Update normals filter logic to use isEqual instead of equals for time